<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="toolbar_history">
    <item
        android:id="@+id/nav_search"
        android:title="@string/search"
        app:showAsAction="ifRoom|collapseActionView"
        android:icon="@drawable/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        />

    <item
        android:title="@string/sort_by"
        app:showAsAction="never"/>

    <item
        android:id="@+id/date_ascending"
        android:title="@string/date_ascending"
        app:showAsAction="never"/>
    <item
        android:id="@+id/date_descending"
        android:title="@string/date_descending"
        app:showAsAction="never"/>

</menu>