<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

        <item
            android:id="@+id/nav_history"
            android:title="@string/history"
            android:icon="@drawable/history"/>
        <item
            android:id="@+id/nav_settings"
            android:title="@string/settings"
            android:icon="@drawable/settings"/>
        <item
            android:id="@+id/nav_aboutapp"
            android:title="About Trackify"
            android:icon="@drawable/about_trackify"/>



    <item
        android:title="">
        <menu>
            <item
                android:id="@+id/draw_nav_logout"
                android:title="@string/logout"
                android:icon="@drawable/logout"/>
        </menu>

    </item>

</menu>