<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".home_fragment"
    android:layout_margin="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            android:elevation="10dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:background="@drawable/trackify_banner" />

        </androidx.cardview.widget.CardView>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="How to use:"
                android:textColor="@color/maroon_secondary"
                android:textSize="18sp"
                android:fontFamily="@font/manrope_bold"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/how_to"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:paddingTop="20dp"
                android:fontFamily="@font/manrope_regular"
                />

            <Space
                android:layout_width="match_parent"
                android:layout_height="60dp"/>

        </LinearLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/scan_Btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/maroon_btn"
            android:padding="10dp"
            android:textColor="@color/white"
            android:layout_marginBottom="20dp"
            app:iconGravity="textStart"
            app:icon="@drawable/barcode_scan"
            app:iconTint="@color/white"
            android:text="@string/scan_barcode_id"/>

        <Button
            android:id="@+id/inputID_Btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/maroon_btn"
            android:padding="10dp"
            app:iconGravity="textStart"
            app:icon="@drawable/id_card"
            android:textColor="@color/white"
            app:iconTint="@color/white"
            android:text="@string/input_id_number"/>


    </LinearLayout>


</FrameLayout>